--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Personal Portfolio website</title>
 </head>
 <body>
-    If the website works then it will probably show this now
-    
+    <h1>If the website works then it will probably show this now</h1>
+
 </body>
 </html>
